--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -38,6 +38,8 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb          
+      - name: Install TailwindCSS CLI
+        run: npm install -D tailwindcss @tailwindcss/cli
       - name: Install Dart Sass
         run: sudo snap install dart-sass
       - name: Checkout
