--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@parcel/watcher": "^2.5.1",
     "@tailwindcss/cli": "^4.1.10",
     "tailwindcss": "^4.1.10"
   },
