--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@parcel/watcher": "^2.5.1",
     "@tailwindcss/cli": "^4.1.10",
+    "lightningcss": "^1.30.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
