--- a/hugo.toml
+++ b/hugo.toml
@@ -15,6 +15,9 @@ disableLanguages = []
     languageName = 'Turkish'
     title = "Ücretsiz QR Menü ve Bulut Kasa Sistemi"
     weight = 1
+    [languages.tr.params]
+      keywords = "menumix, menu mix, qr menü, dijital menü, restoran yönetimi, qr dijital menü, akıllı menü"
+
 
     [[languages.tr.menu.main]]
       name = "Anasayfa"
@@ -82,6 +85,8 @@ disableLanguages = []
     languageName = 'English'
     title = "Free QR Menu and Cloud POS System"
     weight = 2
+    [languages.en.params]
+      keywords = "menumix, menu mix, qr menu, digital menu, restaurant management, qr digital menu, smart menu"
 
     [[languages.en.menu.main]]
       name = "Home"
@@ -148,6 +153,8 @@ disableLanguages = []
     languageName = 'Español'
     title = "Sistema de Menú QR y Caja en la Nube Gratis"
     weight = 3
+    [languages.es.params]
+      keywords = "menumix, menú qr, menú digital, gestión de restaurante, menú inteligente, menú digital qr"
 
     [[languages.es.menu.main]]
       name = "Inicio"
